# symmetric_learning

./: .buildinfo  .gitignore  LICENSE  README.md  examples.html  genindex.html  index.html  linalg.html  models.html  nn.html  objects.inv  py-modindex.html  pyproject.toml  reference.html  representation_theory.html  search.html  searchindex.js  stats.html
.agent/rules/: python-interpreter.md
.github/workflows/: docs.yaml  publish2pypi.yaml  tests.yaml
_modules/: index.html
_modules/symm_learning/: linalg.html  representation_theory.html  stats.html
_sources/: representation_theory.rst.txt  stats.rst.txt
devel/: .buildinfo  examples.html  genindex.html  index.html  linalg.html  models.html  nn.html  objects.inv  py-modindex.html  reference.html  representation_theory.html  search.html  searchindex.js  stats.html
docs/: conf.py  examples.rst  index.rst  linalg.rst  models.rst  nn.rst  reference.rst  representation_theory.rst  stats.rst
examples/: isotypic_decomposition.html
gh-pages/: .buildinfo  examples.html  genindex.html  index.html  linalg.html  models.html  nn.html  objects.inv  py-modindex.html  reference.html  representation_theory.html  search.html  searchindex.js  stats.html
nn/: activation.html  conv.html  disentangled.html  distributions.html  linear.html  normalization.html  parametrizations.html  pooling.html  running_stats.html
symm_learning/: __init__.py  linalg.py  representation_theory.py  stats.py  utils.py
test/: conftest.py  test_linalg.py  test_models.py  test_modules.py  test_stats.py  test_utils_rep_theory.py  utils.py
(+142 files in other folders)
