[project]
name = "symm_torch"
version = "0.0.1"

description = "Torch modules and utilities of equivariant/invariant learning"
readme = "README.md"
requires-python = ">=3.6"

authors = [

]
dependencies = [
  "torch",
  "escnn",
]

# RUFF ___________________________________________________________________________________________________________
[tool.ruff]
line-length = 120

[tool.ruff.lint]
# Enable specific linting rules
select = [
  "F",    # pyflakes: general code quality checks
  "E",    # pycodestyle: PEP8 error checks
  "W",    # pycodestyle: PEP8 warning checks
  "I",    # isort: import sorting checks
  "D",    # pydocstyle: docstring style checks,
  "FA",   # Future annotations
  "ISC",  # String concat
  "ICN",  # Import conventions
  "SIM"   # flake8-simplify
]

# Ignore specific linting rules
ignore = [
  "D401", # Allow any docstring to start with a capital letter, not just "This"
  "D405", # Allow non-imperative mood in docstring section names
  "E701", # Allow multiple statements on one line (colon)
  "D100",  # Ignore missing docstring in public module
  "F401", # Don't remove unused imports
  "D107", # Document __init__ arguments inside class docstring
]

# Exclude specific directories from linting
exclude = [
  ".git",  # Git version control directory
  ".idea", # PyCharm project settings directory
  ".venv",  # Virtual environment directory
  ".vscode"
]

[tool.ruff.lint.pydocstyle]
convention = "google"
